# shatter

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
demo/: main.rs
demos/: benchmark.rs  demo.avif  noise.rs  partitioning.rs
src/: aabb.rs  lib.rs  rc_vec.rs  stack.rs  tests.rs
