[package]
name = "shatter"
license = "MIT"
authors = ["Newton Toto <nyachiengatoto@gmail.com>"]
description = "An algorithm for dividing a 2D space amond a labelled set of Axis-Aligned Bounding Boxes"
categories = [
	"algorithms",
	"geometry",
	"data-structures",
	"no-std",
	"mathematics",
]
version = "0.1.0"
edition = "2021"

[[example]]
name = "partitioning"
path = "demos/partitioning.rs"

[[example]]
name = "benchmark"
path = "demos/benchmark.rs"

[dev-dependencies]
minifb = "0.27"
minifb_fonts = "0.1.3"
simplerand = "1.3.0"
